@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-05-24T08:12:15Z",
+  "count" : 27,
+  "count_minmax" : [ 27, 27 ],
+  "count_decinc" : [ -0, +27 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
