@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-24T00:42:49Z",
+  "timestamp" : "2022-05-24T08:12:15Z",
   "count_outdated" : 1436,
   "uniques_outdated" : 77,
-  "count" : 1562,
-  "uniques" : 88,
+  "count" : 1589,
+  "uniques" : 89,
   "views" : [
     {
       "timestamp": "2022-05-10T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 6,
       "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-24T00:00:00Z",
+      "count": 27,
+      "count_minmax": [ 27, 27 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
