@@ -1,3 +1,10 @@
+2022-05-24T08:12:15Z:
+* notice: last 14d: unq all: 2 153
+* notice: prev accum: outdated-unq outdated-all / unq all: 77 1436 / 88 1562
+* notice: next accum: outdated-unq outdated-all / unq all: 77 1436 / 89 1589
+* notice: prev exec diff / last date diff / accum: unq all: +1 +27 -0 -0 / +1 +27 -0 -0 / 1 27
+* notice: changed dates: [2022-05-24]
+
 2022-05-24T00:42:49Z:
 * notice: last 14d: unq all: 2 126
 * notice: prev accum: outdated-unq outdated-all / unq all: 76 1423 / 88 1557
